--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,17 @@
 # Ignore all environment files.
 /.env*
 
+# Ignore the 
+/node_modules
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+
+# Ignore VCR cassettes.
+/test/vcr_cassettes/*
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
