--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,11 +82,12 @@ jobs:
         run: |
           bin/rails db:test:prepare
           bin/rails test 
+          bin/rails test:system
 
-      # - name: Keep screenshots from failed system tests
-      #   uses: actions/upload-artifact@v4
-      #   if: failure()
-      #   with:
-      #     name: screenshots
-      #     path: ${{ github.workspace }}/tmp/screenshots
-      #     if-no-files-found: ignore
+      - name: Keep screenshots from failed system tests
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: screenshots
+          path: ${{ github.workspace }}/tmp/screenshots
+          if-no-files-found: ignore
