Fix remaining failing tests for final plan fix

--- a/test/fixtures/plans.yml
+++ b/test/fixtures/plans.yml
@@ -3,7 +3,9 @@
 one:
   race_date: <%= Date.today + 17.weeks %>
   plan_type: template
+  length: 18
 
 two:
   race_date: <%= Date.today + 20.weeks %>
   plan_type: custom
+  length: 18
