Replace lib image processing vips dependencies with imagemagick

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,7 @@ jobs:
             google-chrome-stable \
             curl \
             libjemalloc2 \
-            libvips42 \
-            libheif1 \
+            imagemagick \
             sqlite3
 
       - name: Checkout code
