Add libheif1 for ImageMagick HEIC support in CI and production
- Install libheif1 alongside imagemagick to enable HEIC/HEIF codec
- ImageMagick requires libheif1 to decode HEIC files
- This fixes test failures where HEIC->JPEG conversion was silently failing
- Applies to both CI environment and production Docker container

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
             curl \
             libjemalloc2 \
             imagemagick \
+            libheif1 \
             sqlite3
 
       - name: Checkout code
