--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,11 @@
 service: lace
 
 # Name of the container image.
-image: your-user/lace
+image: apdarr/lace
 
 # Deploy to these servers.
 servers:
-  web:
-    - 192.168.0.1
+  - 138.197.29.118
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +18,14 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: lace.club
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  server: ghcr.io
+  username: apdarr
 
   # Always use an access token rather than real password when possible.
   password:
@@ -34,7 +34,7 @@ registry:
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
   secret:
-    - RAILS_MASTER_KEY
+    - RAILS_PRODUCTION_KEY
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
@@ -88,7 +88,9 @@ builder:
   #   - RAILS_MASTER_KEY
 
 # Use a different ssh user than root
-# ssh:
+ssh:
+  log_level: debug
+#  user: deploy
 #   user: app
 
 # Use accessory services (secrets come from .kamal/secrets).
