--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,7 +23,7 @@ proxy:
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
+  # server: registry.digitalocean.com / ghcr.io / ...``
   server: ghcr.io
   username: apdarr
 
@@ -34,7 +34,7 @@ registry:
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
   secret:
-    - RAILS_PRODUCTION_KEY
+    - RAILS_MASTER_KEY
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
