--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,7 +23,7 @@ proxy:
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...``
+  # server: registry.digitalocean.com / ghcr.io / ...
   server: ghcr.io
   username: apdarr
 
