Get cassettes operational for new strava webhook matching

--- a/test/vcr_cassettes/strava_webhook_delete.yml
+++ b/test/vcr_cassettes/strava_webhook_delete.yml
@@ -1,8 +1,8 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: https://www.strava.com/api/v3/push_subscriptions?client_id=<STRAVA_CLIENT_ID>&client_secret=<STRAVA_CLIENT_SECRET>
+    method: delete
+    uri: https://www.strava.com/api/v3/push_subscriptions/12345?client_id=<STRAVA_CLIENT_ID>&client_secret=<STRAVA_CLIENT_SECRET>
     body:
       encoding: US-ASCII
       string: ''
@@ -15,8 +15,8 @@ http_interactions:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
     status:
-      code: 200
-      message: OK
+      code: 404
+      message: Not Found
     headers:
       Content-Type:
       - application/json; charset=utf-8
@@ -25,21 +25,21 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 22 Oct 2025 20:37:50 GMT
+      - Mon, 20 Oct 2025 21:49:04 GMT
       X-Envoy-Upstream-Service-Time:
-      - '36'
+      - '43'
       Server:
       - istio-envoy
       Status:
-      - 200 OK
+      - 404 Not Found
       X-Ratelimit-Usage:
-      - '1,1'
+      - '6,29'
       X-Ratelimit-Limit:
       - '200,2000'
       Vary:
       - Accept, Origin
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       Referrer-Policy:
       - strict-origin-when-cross-origin
       X-Permitted-Cross-Domain-Policies:
@@ -47,29 +47,28 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Request-Id:
-      - 978b69c4-cc89-4ca0-989e-51165d4daf61
+      - 6734ec7c-554c-45d7-a3aa-ffa6277f438b
       X-Readratelimit-Limit:
       - '100,1000'
       X-Download-Options:
       - noopen
-      Etag:
-      - W/"57a783efff32988336c598713ef6839b"
       X-Frame-Options:
       - DENY
       X-Readratelimit-Usage:
-      - '1,1'
+      - '6,29'
       X-Content-Type-Options:
       - nosniff
       X-Cache:
-      - Miss from cloudfront
+      - Error from cloudfront
       Via:
-      - 1.1 d7cd7bbb5e691f063a58871257c8120e.cloudfront.net (CloudFront)
+      - 1.1 72fa6bb6402ca4bbe8bd4aeecbb56c4e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - ORD58-P4
       X-Amz-Cf-Id:
-      - XsDeghA1BtIJtZ1L-_uT6AJAJgdJjX9leW2qmN4mqpO_850dhRIgJg==
+      - I7pIVN5UhLXqjqN3GZZrvZtAsXjD66az---UalL0UQ0-NhmCTGvFhQ==
     body:
       encoding: ASCII-8BIT
-      string: '[{"id":310806,"resource_state":2,"application_id":<STRAVA_CLIENT_ID>,"callback_url":"https://4eaab962dc06.ngrok-free.app/webhooks/strava","created_at":"2025-10-20T21:45:25+00:00","updated_at":"2025-10-20T21:45:25+00:00"}]'
-  recorded_at: Wed, 22 Oct 2025 20:37:50 GMT
+      string: '{"message":"Resource Not Found","errors":[{"resource":"PushSubscription","field":"","code":"not
+        found"}]}'
+  recorded_at: Mon, 20 Oct 2025 21:49:04 GMT
 recorded_with: VCR 6.3.1
