--- a/test/vcr_cassettes/strava_webhook_register.yml
+++ b/test/vcr_cassettes/strava_webhook_register.yml
@@ -1,22 +1,24 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: https://www.strava.com/api/v3/push_subscriptions?client_id=<STRAVA_CLIENT_ID>&client_secret=<STRAVA_CLIENT_SECRET>
+    method: post
+    uri: https://www.strava.com/api/v3/push_subscriptions
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: UTF-8
+      string: callback_url=https%3A%2F%2F4eaab962dc06.ngrok-free.app%2Fwebhooks%2Fstrava&client_id=<STRAVA_CLIENT_ID>&client_secret=<STRAVA_CLIENT_SECRET>&verify_token=lace_strava_webhook
     headers:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
       - Strava Ruby Client/2.2.0
+      Content-Type:
+      - application/x-www-form-urlencoded
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
     status:
-      code: 200
-      message: OK
+      code: 201
+      message: Created
     headers:
       Content-Type:
       - application/json; charset=utf-8
@@ -25,15 +27,15 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 22 Oct 2025 20:37:50 GMT
+      - Mon, 20 Oct 2025 21:45:24 GMT
       X-Envoy-Upstream-Service-Time:
-      - '36'
+      - '455'
       Server:
       - istio-envoy
       Status:
-      - 200 OK
+      - 201 Created
       X-Ratelimit-Usage:
-      - '1,1'
+      - '1,24'
       X-Ratelimit-Limit:
       - '200,2000'
       Vary:
@@ -47,29 +49,29 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Request-Id:
-      - 978b69c4-cc89-4ca0-989e-51165d4daf61
+      - fd9d4e54-0dcc-4614-9043-597aa8d0c7e6
       X-Readratelimit-Limit:
       - '100,1000'
       X-Download-Options:
       - noopen
       Etag:
-      - W/"57a783efff32988336c598713ef6839b"
+      - W/"78315bf3c63164f707fae146cf85fc50"
       X-Frame-Options:
       - DENY
       X-Readratelimit-Usage:
-      - '1,1'
+      - '1,24'
       X-Content-Type-Options:
       - nosniff
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 d7cd7bbb5e691f063a58871257c8120e.cloudfront.net (CloudFront)
+      - 1.1 9b7d7011177b24785643c881028bb8ea.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - ORD58-P4
       X-Amz-Cf-Id:
-      - XsDeghA1BtIJtZ1L-_uT6AJAJgdJjX9leW2qmN4mqpO_850dhRIgJg==
+      - tq3VMRd54Y8YK5gd5r3SHCfG8FTH9G3OTRbEuMk5v6lV5-yLhWi1BA==
     body:
-      encoding: ASCII-8BIT
-      string: '[{"id":310806,"resource_state":2,"application_id":<STRAVA_CLIENT_ID>,"callback_url":"https://4eaab962dc06.ngrok-free.app/webhooks/strava","created_at":"2025-10-20T21:45:25+00:00","updated_at":"2025-10-20T21:45:25+00:00"}]'
-  recorded_at: Wed, 22 Oct 2025 20:37:50 GMT
+      encoding: UTF-8
+      string: '{"id":310806}'
+  recorded_at: Mon, 20 Oct 2025 21:45:24 GMT
 recorded_with: VCR 6.3.1
