--- a/test/vcr_cassettes/strava_webhook_view_subscription.yml
+++ b/test/vcr_cassettes/strava_webhook_view_subscription.yml
@@ -2,13 +2,17 @@
 http_interactions:
 - request:
     method: get
-    uri: https://www.strava.com/api/v3/push_subscriptions/12345?client_id&client_secret
+    uri: https://www.strava.com/api/v3/push_subscriptions?client_id=<STRAVA_CLIENT_ID>&client_secret=<STRAVA_CLIENT_SECRET>
     body:
-      encoding: UTF-8
+      encoding: US-ASCII
       string: ''
     headers:
       Accept:
-      - "*/*"
+      - application/json; charset=utf-8
+      User-Agent:
+      - Strava Ruby Client/2.2.0
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
     status:
       code: 200
@@ -16,9 +20,56 @@ http_interactions:
     headers:
       Content-Type:
       - application/json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 22 Oct 2025 20:37:50 GMT
+      X-Envoy-Upstream-Service-Time:
+      - '33'
+      Server:
+      - istio-envoy
+      Status:
+      - 200 OK
+      X-Ratelimit-Usage:
+      - '3,3'
+      X-Ratelimit-Limit:
+      - '200,2000'
+      Vary:
+      - Accept, Origin
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      Referrer-Policy:
+      - strict-origin-when-cross-origin
+      X-Permitted-Cross-Domain-Policies:
+      - none
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Request-Id:
+      - e02168dd-044b-4fa7-a54b-5998fa6e248f
+      X-Readratelimit-Limit:
+      - '100,1000'
+      X-Download-Options:
+      - noopen
+      Etag:
+      - W/"57a783efff32988336c598713ef6839b"
+      X-Frame-Options:
+      - DENY
+      X-Readratelimit-Usage:
+      - '3,3'
+      X-Content-Type-Options:
+      - nosniff
+      X-Cache:
+      - Miss from cloudfront
+      Via:
+      - 1.1 5d16f202bc16a938de150ce36778476c.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - ORD58-P4
+      X-Amz-Cf-Id:
+      - "-XguVyz1DwibLvvZrPMMWEw-7fP1HOxBZMcaVm0QtvAxV7c39Yzc1A=="
     body:
-      encoding: UTF-8
-      string: '{"id":12345,"application_id":67890,"callback_url":"https://example.com/webhooks/strava","created_at":"2024-01-15T10:00:00Z","updated_at":"2024-01-15T10:00:00Z"}'
-    http_version: null
-  recorded_at: Mon, 20 Oct 2025 15:00:00 GMT
-recorded_with: VCR 6.1.0
+      encoding: ASCII-8BIT
+      string: '[{"id":310806,"resource_state":2,"application_id":<STRAVA_CLIENT_ID>,"callback_url":"https://4eaab962dc06.ngrok-free.app/webhooks/strava","created_at":"2025-10-20T21:45:25+00:00","updated_at":"2025-10-20T21:45:25+00:00"}]'
+  recorded_at: Wed, 22 Oct 2025 20:37:50 GMT
+recorded_with: VCR 6.3.1
