--- a/test/fixtures/plans.yml
+++ b/test/fixtures/plans.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
+  user_id: 1
   race_date: <%= Date.today + 17.weeks %>
   plan_type: template
   length: 18
 
 two:
+  id: 2
+  user_id: 1
   race_date: <%= Date.today + 20.weeks %>
   plan_type: custom
   length: 18
