--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,9 @@ jobs:
         env:
           RAILS_ENV: test
           # REDIS_URL: redis://localhost:6379/0
+          STRAVA_CLIENT_ID: test_client_id
+          STRAVA_CLIENT_SECRET: test_client_secret
+          STRAVA_WEBHOOK_VERIFY_TOKEN: test_verify_token
         run: |
           bin/rails db:test:prepare
           bin/rails test 
