--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,10 +86,8 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_TEST_KEY }}
           # REDIS_URL: redis://localhost:6379/0
-          STRAVA_CLIENT_ID: test_client_id
-          STRAVA_CLIENT_SECRET: test_client_secret
-          STRAVA_WEBHOOK_VERIFY_TOKEN: test_verify_token
         run: |
           bin/rails db:test:prepare
           bin/rails test 
